# keycloak-config-verifyer

./: .gitignore  AGENTS.md  CLAUDE.md  JUSTFILE-QUICKSTART.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md  check-reference.md  justfile-reference.md  oidc-oauth-best-practices.md  reports.md  security.md  usage-guide.md
src/keycloak_analyzer/: __init__.py  cli.py
src/keycloak_analyzer/checks/: __init__.py  base.py  client_auth.py  flows.py  misc.py  pkce.py  redirect_uri.py  token_security.py  transport.py
src/keycloak_analyzer/core/: __init__.py  analyzer.py  discovery.py  loader.py
src/keycloak_analyzer/models/: __init__.py  client.py  finding.py  realm.py
src/keycloak_analyzer/reports/: __init__.py  base.py  console.py  html.py  json_reporter.py
src/keycloak_analyzer/utils/: __init__.py  grouping.py
tests/fixtures/: client-auth-realm.json  enterprise-realistic-realm.json  flow-violations-realm.json  microservices-realm.json  mixed-realm.json  mobile-app-realm.json  pkce-violations-realm.json  redirect-uri-issues-realm.json  saas-application-realm.json  secure-realm.json  token-security-realm.json  vulnerable-realm.json
tests/unit/: test_redirect_uri.py
