[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-analyzer"
version = "0.1.0"
description = "Static security analysis tool for Keycloak realm configurations"
authors = [{name = "Kristoffer Opsahl", email = "hello@kristofferopsahl.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/kriops/keycloak-config-verifyer"
Repository = "https://github.com/kriops/keycloak-config-verifyer"
Issues = "https://github.com/kriops/keycloak-config-verifyer/issues"
Documentation = "https://github.com/kriops/keycloak-config-verifyer/blob/main/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
keycloak-analyzer = "keycloak_analyzer.cli:analyze"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N815"]  # Ignore line length and mixedCase (matches Keycloak JSON schema)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=keycloak_analyzer --cov-report=html --cov-report=term"
